[gd_scene load_steps=7 format=3 uid="uid://d2tcufci502xh"]

[ext_resource type="Script" uid="uid://cv5p44153gcr4" path="res://objects/card_status.gd" id="1_ky7jd"]
[ext_resource type="PackedScene" uid="uid://g7yv71p73utl" path="res://objects/attribute.tscn" id="2_c6fv0"]
[ext_resource type="Script" uid="uid://b33v4x0u4vebx" path="res://objects/notched_bar.gd" id="3_jhyor"]
[ext_resource type="Texture2D" uid="uid://cgvcggvt58dyg" path="res://sprites/icons/point_up.png" id="3_pmapq"]

[sub_resource type="LabelSettings" id="LabelSettings_3dq0f"]
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_pasle"]
font_size = 28

[node name="CardStatus" type="Node2D"]
script = ExtResource("1_ky7jd")

[node name="Panel" type="Panel" parent="."]
offset_left = -80.0
offset_top = -90.0
offset_right = 80.0
offset_bottom = 90.0

[node name="Attribute" parent="Panel" instance=ExtResource("2_c6fv0")]
position = Vector2(21, 123)
scale = Vector2(0.15, 0.15)

[node name="LabelHP" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.275
anchor_top = -0.15
anchor_right = -0.275
anchor_bottom = -0.15
offset_left = 56.0
offset_top = 32.0
offset_right = 165.0
offset_bottom = 77.0
text = "HP"
label_settings = SubResource("LabelSettings_3dq0f")

[node name="ValueHP" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.15
anchor_right = 0.11875
anchor_bottom = -0.15
offset_left = 20.0
offset_top = 32.0
offset_right = 129.0
offset_bottom = 77.0
text = "10/10"
label_settings = SubResource("LabelSettings_3dq0f")
horizontal_alignment = 2

[node name="PanelHP" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 14.0
offset_top = 42.0
offset_right = 146.0
offset_bottom = 72.0

[node name="Gauge" type="Control" parent="Panel/PanelHP"]
anchors_preset = 0
offset_right = 132.0
offset_bottom = 30.0
script = ExtResource("3_jhyor")

[node name="LabelATK" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.275
anchor_top = -0.15
anchor_right = -0.275
anchor_bottom = -0.15
offset_left = 56.0
offset_top = 99.0
offset_right = 165.0
offset_bottom = 144.0
text = "ATK"
label_settings = SubResource("LabelSettings_3dq0f")

[node name="ValueATK" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.15
anchor_right = 0.11875
anchor_bottom = -0.15
offset_left = 20.0
offset_top = 99.0
offset_right = 129.0
offset_bottom = 144.0
text = "10"
label_settings = SubResource("LabelSettings_3dq0f")
horizontal_alignment = 2

[node name="AttackType" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.275
anchor_top = -0.15
anchor_right = -0.275
anchor_bottom = -0.15
offset_left = 56.0
offset_top = 131.0
offset_right = 192.0
offset_bottom = 170.0
text = "Type"
label_settings = SubResource("LabelSettings_pasle")
horizontal_alignment = 2

[node name="PanelCharge" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 14.0
offset_top = 142.0
offset_right = 146.0
offset_bottom = 172.0

[node name="Gauge" type="Control" parent="Panel/PanelCharge"]
layout_mode = 3
anchors_preset = 0
offset_right = 132.0
offset_bottom = 30.0
script = ExtResource("3_jhyor")
color_on = Color(0.211765, 0.439216, 1, 1)

[node name="ATKArrow" type="Sprite2D" parent="Panel"]
position = Vector2(106, 92)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_pmapq")
